its getting very pretty

--- a/style.css
+++ b/style.css
@@ -3,16 +3,27 @@ body {
   font-family: 'Encode Sans Expanded', sans-serif;
 }
 
-input, #swoop {
+input {
+  background-color: #eee;
+  font-size: 14px;
+  border: 0px;
+  border-radius: 6.25px;
+  height: 25px;
+  padding: 3px;
+}
+
+#swoop {
   background-color: #eee;
   font-size: 14px;
   border-radius: 6.25px;
+  height: 25px;
+  width: 75px;
+  margin-left: 10px;
 }
 
 #clear {
   background-color: rgba(255, 0, 0, 0.05);
   color: rgba(0, 0, 0, 0.5);
-  font-weight: 700;
   font-size: 14px;
   border-radius: 6.25px;
 }
@@ -27,9 +38,14 @@ li {
   border: 2px solid black;
   border-radius: 6.25px;
   padding: 4px 4px;
+  cursor: pointer;
 }
 
 #newLinks {
   background-color: black;
   color: limegreen;
+}
+
+hr {
+  opacity: 0.3;
 }
